@@ -1,4 +1,9 @@
-2//2024
+4/1/2024
+    Change function getRecipes:
+        Check whether the text of an h3 link to a recipe starts with 
+        'Recipe: '. If so, discard 'Recipe: ' and use the remainder of the text as the recipe name.  
+
+3/6/2024
     Change function getRecipes:
         - Limit the search for recipe links to the <section> element named articleBody.
         - For <p> elements containing 'Recipe[s]:', 'Pairing[s]:, 'Eat:' etc, require those terms to be at the beginning of the text.
